<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_textview"
            android:textColor="#0A9A9A"
            android:textSize="30sp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_edittext"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/hello_world_button"
            android:fontFamily="sans-serif"
            android:textColor="#BBBBBB" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_switch"
            android:gravity="right" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world_checkbox"
            android:textStyle="bold"
            android:textDirection="rtl"
            android:textAllCaps="true"/>

        <ToggleButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textOn="@string/hello_world_togglebutton"
            android:textOff="Hello World!"
            android:background="#0fafff"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>